fixed overflow issue

--- a/password generator/style.css
+++ b/password generator/style.css
@@ -31,7 +31,7 @@ body {
 
 #password-field {
     align-self: center;
-    width: 70%;
+    width: 520px;
     padding: 15px 9px;
     margin-top: 35px;
     font-size: 1.05rem;
